@@ -2,6 +2,7 @@
  - fix: polygon translation via drag-n-drop in polygon edit mode
    was not taken into account (#115)
  - enh: add (de-)select all button for lists in ComputeStatistics (#116)
+ - enh: convert all selectable lists in dialogs to new BulkList class
  - setup: bump dclab from 0.39.13 to 0.39.15
 2.9.4
  - enh: display session file name in window title
